--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/markdown-remark": "^6.3.5",
-    "@astrojs/sitemap": "^3.4.2",
-    "astro": "^5.2.5"
+    "@astrojs/sitemap": "^3.4.2"
+  },
+  "devDependencies": {
+    "astro": "^5.12.9"
   }
 }
