--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/markdown-remark": "^6.3.5",
     "@astrojs/sitemap": "^3.4.2"
   },
   "devDependencies": {
-    "astro": "^5.12.9"
+    "astro": "^5.12.9",
+    "gh-pages": "^6.3.0"
   }
 }
